--- a/app/app.html
+++ b/app/app.html
@@ -16,8 +16,20 @@
 	<body>
 		<!-- Header -->
 		<h1>Fantasy Civics</h1>
+		<p>User account stuffs</p>
 
 		<!-- Contents -->
+		<a href="index.html">Home</a>
+		<a href="#">App</a>
+
+		<h2>User Info</h2>
+		<div>
+			<p id="userid"></p>
+			<p id="email"></p>
+			<p id="name"></p>
+			<img id="image" style="width:64px;height:64px;" alt="No Image"></img>
+			<button onclick="Application().userLogout()">Logout</button>
+		</div>
 
 		<h2>Create Leagues</h2>
 		<div id="newLeague">
@@ -51,7 +63,7 @@
 		<script type="text/javascript">
 			// Instantiate app
 			var app = Application();
-
+			app.getUser();
 			app.createLeague();
 		</script>
 	</body>
