--- a/app/index.html
+++ b/app/index.html
@@ -18,10 +18,21 @@
 		<p>Insert splash page, and fancy stuff</p>
 
 		<!-- Contents -->
-		<h2>Login</h2>
+		<a href="#">Home</a>
+		<a href="app.html">App</a>
+
+		<h2>User Info</h2>
 		<div>
-			<input type="button" value="Google Authentication" onclick="Application().userLogin()">
+			<p id="userid"></p>
+			<p id="email"></p>
+			<p id="name"></p>
+			<img id="image" style="width:64px;height:64px;" alt="No Image"></img>
+			<button onclick="Application().userLogout()">Logout</button>
 		</div>
+		
+		<h2>Login</h2>
+
+		<input type="button" value="Google Authentication" onclick="Application().userLogin()">
 
 		<!-- Footer -->
 
@@ -37,6 +48,7 @@
 		<script type="text/javascript">
 			// Instantiate app
 			var app = Application();
+			app.getUser();
 		</script>
 	</body>
 </html>
