--- a/database/match.html
+++ b/database/match.html
@@ -64,19 +64,21 @@
 				}).then((match) => {
 					console.log('Test Get Match Response');
 					console.log(match);
+					var p1 = Database.getRoster({
+						userid: match.home,
+						leagueid: l1,
+						from: match.start,
+						to: match.end
+					});
+					var p2 = Database.getRoster({
+						userid: match.away,
+						leagueid: l1,
+						from: match.start,
+						to: match.end
+					});
 					Promise.all([
-						Database.getRoster({
-							userid: match.home,
-							leagueid: l1,
-							from: match.start,
-							to: match.end
-						}),
-						Database.getRoster({
-							userid: match.away,
-							leagueid: l1,
-							from: match.start,
-							to: match.end
-						})
+						p1,
+						p2
 					]).then((participants) => {
 						var homeUser = participants[0];
 						var awayUser = participants[1];
@@ -97,9 +99,9 @@
 				console.log(league);
 				loadMatch(league);
 				//
-				renderSchedule(league.schedule, league, league.users);
+				//renderSchedule(league.schedule, league, league.users);
 				for(var uid in league.rosters){
-					renderRosters(league.rosters[uid], uid, league);
+					//renderRosters(league.rosters[uid], uid, league);
 				}
 				Database.getAllPlayers({
 					leagueid: league.leagueid,
@@ -107,7 +109,7 @@
 					to: league.to
 				}).then((allPlayers) => {
 					console.log('Test Get All Players Response');
-					renderPlayerScores(allPlayers, league);
+					//renderPlayerScores(allPlayers, league);
 				}).catch((err2) => {
 					console.log('Test Get All Players Response');
 					console.error(err2);
