fixed user info storage, added get roster

--- a/app/app.html
+++ b/app/app.html
@@ -21,6 +21,7 @@
 		<!-- Contents -->
 		<a href="index.html">Home</a>
 		<a href="#">App</a>
+		<a href="roster.html">Roster</a>
 
 		<h2>User Info</h2>
 		<div>
