--- a/app/roster.html
+++ b/app/roster.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Requests</title>
-
+		<title>Roster</title>
 
 		<script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
 		<script type="text/javascript" src="../assets/vue.js"></script>
@@ -12,30 +10,11 @@
 		<script type="text/javascript" src="../assets/jquery-3.1.1.min.js"></script>
 	</head>
 	<body>
-		<!-- Header -->
-		
-		<h1>Fantasy Civics</h1>
-		<p>Insert splash page, and fancy stuff</p>
-
-		<!-- Contents -->
-		<a href="#">Home</a>
+		<h1>Roster</h1>
+		<a href="index.html">Home</a>
 		<a href="app.html">App</a>
-		<a href="roster.html">Roster</a>
+		<a href="#">Roster</a>
 
-		<h2>User Info</h2>
-		<div>
-			<p id="userid"></p>
-			<p id="email"></p>
-			<p id="name"></p>
-			<img id="image" style="width:64px;height:64px;" alt="No Image"></img>
-			<button onclick="Application().userLogout()">Logout</button>
-		</div>
-		
-		<h2>Login</h2>
-
-		<input type="button" value="Google Authentication" onclick="Application().userLogin()">
-
-		<!-- Footer -->
 
 		<!-- script -->
 
