--- a/database/match.html
+++ b/database/match.html
@@ -49,30 +49,31 @@
 			var l1 = '-KdIiWEUj7_toD3MKMO_';
 			var l2 = '-KdJnBQC6hc7OF9FguyQ';
 			var test = '-KdYWQQsWkAVuLiIoAwN';
+			var l3 = '-KdiofxVNZK1_QDoI3cN';
 
 			var Database = InitDatabase();
 
-			var fromDate = new Date('2/4/2017').getTime();
-			var toDate = new Date('2/7/2017').getTime()
-			var onDate = new Date('2/5/2017').getTime()
+			var fromDate = new Date('2/19/2017').getTime();
+			var toDate = new Date('2/24/2017').getTime()
+			var onDate = Date.now();//new Date('2/24/2017').getTime()
 
 			function loadMatch(league){
 				Database.getMatch({
 					userid: 'testuser0002',
-					leagueid: l1,
+					leagueid: l3,
 					on: onDate
 				}).then((match) => {
 					console.log('Test Get Match Response');
 					console.log(match);
 					var p1 = Database.getRoster({
 						userid: match.home,
-						leagueid: l1,
+						leagueid: l3,
 						from: match.start,
 						to: match.end
 					});
 					var p2 = Database.getRoster({
 						userid: match.away,
-						leagueid: l1,
+						leagueid: l3,
 						from: match.start,
 						to: match.end
 					});
@@ -91,7 +92,7 @@
 			}
 
 			Database.getLeague({
-				leagueid: l1,
+				leagueid: l3,
 				from: fromDate,
 				to: toDate
 			}).then((league) => {
@@ -103,50 +104,10 @@
 				for(var uid in league.rosters){
 					renderRosters(league.rosters[uid], uid, league);
 				}
-				Database.getAllPlayers({
-					leagueid: league.leagueid,
-					from: league.from,
-					to: league.to
-				}).then((allPlayers) => {
-					console.log('Test Get All Players Response');
-					renderPlayerScores(allPlayers, league);
-				}).catch((err2) => {
-					console.log('Test Get All Players Response');
-					console.error(err2);
-				});
 			}).catch((err) => {
 				console.log('Test Get League Response');
 				console.error(err);
 			});
-
-			// Comment out after testing once: changes persist
-			/*Database.movePlayer({
-				leagueid: l1,
-				userid: 'testuser0002',
-				sit: 'playerid0020',
-				start: 'playerid0031'
-			}).then((res) => {
-				console.log('Test Move Player Request');
-				console.log(res);
-			}).catch((err) => {
-				console.log('Test Move Player Request');
-				console.error(err);
-			});*/
-
-			// Comment out after testing once: changes persist
-			/*Database.createLeague({
-				name: 'ChiHackNight Test League',
-				start: new Date('1/1/2017').getTime(),
-				end: new Date('1/23/2017').getTime(),
-				users: ['testuser0001', 'testuser0002', 'testuser0003'],
-				weeks: 3
-			}).then((response) => {
-				console.log('Testing Create League');
-				console.log(response);
-			}).catch((err) => {
-				console.log('Testing Create League');
-				console.error(err);
-			});*/
 
 		</script>
 	
