--- a/app/roster.html
+++ b/app/roster.html
@@ -16,12 +16,19 @@
 		<a href="#">Roster</a>
 
 		<div id="userPlayers">
-			
 			<table>
 				<tr>
-					<th>Alderman</th><th>Graffiti</th><th>Pot Holes</th><th>Street Lights</th><th>Score</th><th>Status</th><th>Actions</th><th>Pending</th>
+					<th>Alderman</th><th>Graffiti</th><th>Pot Holes</th><th>Street Lights</th><th>Score</th><th>lineup</th><th>Actions</th><th>Pending</th>
 				</tr>
-				<tr is="player-list" v-for="(player, index) in players" v-bind:lineup="player" v-on:drop="dropPlayer(index)" v-on:toggle="togglePlayer(index)"></tr>
+				<tr is="player-list" v-for="(player, index) in players" v-bind:lineup="player" v-on:toggle="togglePlayer(index)"></tr>
+			</table>
+			<button v-on:click="updateLineup">Update Lineup</button>
+			<button v-on:click="updateRoster">Update Roster</button>
+		</div>
+
+		<div id="allPlayers">
+			<table>
+				<th>Alderman</th><th>Graffiti</th><th>Pot Holes</th><th>Street Lights</th><th>Score</th><th>League</th><th>Actions</th><th>Pending</th>
 			</table>
 		</div>
 
