--- a/app/roster.html
+++ b/app/roster.html
@@ -15,12 +15,12 @@
 		<a href="app.html">App</a>
 		<a href="#">Roster</a>
 
-		<div id="userPlayers">
+		<div id="userRoster">
 			<table>
 				<tr>
 					<th>Alderman</th><th>Graffiti</th><th>Pot Holes</th><th>Street Lights</th><th>Score</th><th>lineup</th><th>Actions</th><th>Pending</th>
 				</tr>
-				<tr is="player-list" v-for="(player, index) in players" v-bind:lineup="player" v-on:toggle="togglePlayer(index)"></tr>
+				<tr is="roster-list" v-for="(player, index) in players" v-bind:row="player" v-on:toggle="togglePlayer(index)"></tr>
 				<tr>
 					<td></td>
 					<td></td>
