updated get all players dropdown options

--- a/app/roster.html
+++ b/app/roster.html
@@ -36,7 +36,7 @@
 		<div id="allPlayers">
 			<table>
 				<th>Alderman</th><th>Graffiti</th><th>Pot Holes</th><th>Street Lights</th><th>Score</th><th>League</th><th>Actions</th><th>Pending</th>
-				<tr is="player-list" v-for="(player, index) in players" v-bind:row="player" v-on:toggle="togglePlayer(index)"></tr>
+				<tr is="player-list" v-for="(player, index) in players" v-bind:row="player" v-bind:swap="rosters" v-on:toggle="togglePlayer(index)"></tr>
 			</table>
 		</div>
 
