--- a/app/roster.html
+++ b/app/roster.html
@@ -20,7 +20,7 @@
 				<tr>
 					<th>Players</th><th>Graffiti</th><th>Pot Holes</th><th>Street Lights</th><th>Score</th><th>lineup</th><th>Actions</th><th>Pending</th>
 				</tr>
-				<tr is="roster-list" v-for="(player, index) in players" v-bind:row="player" v-on:toggle="togglePlayer(index)"></tr>
+				<tr is="roster-list" v-for="(player, index) in players" v-bind:row="player" v-bind:swap="players" v-on:toggle="togglePlayer(index)"></tr>
 				<tr>
 					<td></td><td></td><td></td><td></td>
 					<td>{{ aggregator }}</td>
