--- a/app/roster.html
+++ b/app/roster.html
@@ -33,8 +33,8 @@
 
 		<div id="allPlayers">
 			<table>
-				<th>Alderman</th><th>Graffiti</th><th>Pot Holes</th><th>Street Lights</th><th>Score</th><th>League</th><th>Actions</th><th>Pending</th>
-				<tr is="player-list" v-for="(player, index) in players" v-bind:row="player" v-bind:swap="rosters"></tr>
+				<th>Players</th><th>Graffiti</th><th>Pot Holes</th><th>Street Lights</th><th>Score</th><th>League</th><th>Actions</th><th>Pending</th>
+				<tr is="player-list" v-for="(player, index) in players" v-bind:row="player" v-bind:swap="rosters" v-on:aquire="aquirePlayer(index)"></tr>
 			</table>
 		</div>
 
