converted for-loops to mapper functions

--- a/app/app.html
+++ b/app/app.html
@@ -25,10 +25,10 @@
 
 		<h2>User Info</h2>
 		<div>
-			<p id="userid"></p>
+			<!-- <p id="userid"></p> -->
 			<p id="email"></p>
 			<p id="name"></p>
-			<img id="image" style="width:64px;height:64px;" alt="No Image"></img>
+			<!-- <img id="image" style="width:64px;height:64px;" alt="No Image"></img> -->
 			<button onclick="Application().userLogout()">Logout</button>
 		</div>
 
@@ -51,13 +51,15 @@
 		</div>
 
 		<h2>Current Leagues</h2>
-		<div id="displayLeagues">
+		<table id="userLeagues">
+			<th>League Name</th>
+			<tr is="league-list" v-for="(league, index) in leagues" v-bind:row="league"></tr>
 			<ul>
-				<li is="league-list" v-for="(league, index) in leagues" v-bind:idx="league" v-on:info="getIdx(index)"></li>
+				<li is="league-list" v-for="(league, index) in leagues" v-bind:row="league" v-on:info="getIdx(index)"></li>
 				<!-- <li is="league-list" v-for="(league, index) in leagues" v-bind:list="league" v-on:info="console.log(index)"></li> -->
 			</ul>
 			
-		</div>
+		</table>
 
 		<!-- Footer -->
 
@@ -74,7 +76,9 @@
 			// Instantiate app
 			var app = Application();
 			app.getUser();
+			app.displayUser();
 			app.createLeague();
+			app.getUserLeagues();
 		</script>
 	</body>
 </html>
