--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 			<p id="userid"></p>
 			<p id="email"></p>
 			<p id="name"></p>
-			<img id="image" style="width:64px;height:64px;" alt="No Image"></img>
+			<!-- <img id="image" style="width:64px;height:64px;" alt="No Image"></img> -->
 			<button onclick="Application().userLogout()">Logout</button>
 		</div>
 		
