split functions to get and display data

--- a/app/roster.html
+++ b/app/roster.html
@@ -60,8 +60,8 @@
 			var app = Application();
 			app.getUser();
 			app.displayUser();
-			app.getRoster();
-			app.getAllPlayers();
+			app.displayRoster();
+			app.displayAllPlayers();
 		</script>
 	</body>
 </html>
