--- a/app/roster.html
+++ b/app/roster.html
@@ -60,8 +60,9 @@
 			var app = Application();
 			app.getUser();
 			app.displayUser();
-			app.displayRoster();
-			app.displayAllPlayers();
+			app.loadRosterPage();
+			//app.displayRoster();
+			//app.displayAllPlayers();
 		</script>
 	</body>
 </html>
