--- a/app/roster.html
+++ b/app/roster.html
@@ -11,7 +11,48 @@
 	</head>
 	<body>
 		<h1>Roster</h1>
-		<p>Insert roster page, and fancy tables</p>
+		<p>
+<h2> Current Player </h2>
+<table border="1">
+  <tr>
+    <th>Name</th>
+    <th>Area</th>
+    <th>Ward</th>
+    <th>Status</th>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td>
+        <select>
+            <option value="Drop">Drop</option>
+            <option value="Starting">Start</option>
+            <option value="Bench">Bench</option>
+        </select>
+    </td>
+
+  </tr>
+</table>
+<h2>Other Players</h2>
+<button type="button"> Register </button>
+<table border="1">
+  <tr>
+    <th>Name</th>
+    <th>Area</th>
+    <th>Ward</th>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td>
+        <button type="button">Add</button>
+    </td>
+
+  </tr>
+</table>
+		</p>
 		<a href="index.html">Home</a>
 		<a href="app.html">App</a>
 		<a href="#">Roster</a>
