--- a/database/match.html
+++ b/database/match.html
@@ -51,23 +51,28 @@
 			var test = '-KdYWQQsWkAVuLiIoAwN';
 			var l3 = '-KdiofxVNZK1_QDoI3cN';
 
+			var LEAGUE_ID = l3;
+
 			var Database = InitDatabase();
 
 			var fromDate = new Date('2/19/2017').getTime();
 			var toDate = new Date('2/24/2017').getTime()
-			var onDate = Date.now();//new Date('2/24/2017').getTime()
+			var onDate = new Date('2/24/2017').getTime()
+
+			var testUser = 'testuser0001';
+			var testTime = onDate;//new Date('2/3/2017').getTime();
 
 			function loadMatch(league){
 				Database.getMatch({
-					userid: 'testuser0002',
-					leagueid: l3,
+					userid: testUser,
+					leagueid: LEAGUE_ID,
 					on: onDate
 				}).then((match) => {
 					console.log('Test Get Match Response');
 					console.log(match);
 					var p1 = Database.getRoster({
 						userid: match.home,
-						leagueid: l3,
+						leagueid: LEAGUE_ID,
 						from: match.start,
 						to: match.end
 					});
@@ -92,7 +97,7 @@
 			}
 
 			Database.getLeague({
-				leagueid: l3,
+				leagueid: LEAGUE_ID,
 				from: fromDate,
 				to: toDate
 			}).then((league) => {
@@ -106,6 +111,18 @@
 				}
 			}).catch((err) => {
 				console.log('Test Get League Response');
+				console.error(err);
+			});
+
+			// Test Match Scoring
+			Database.getMatchScore({
+				leagueid: LEAGUE_ID,
+				userid: testUser,
+				on: testTime
+			}).then((score) => {
+				console.log('Match Outcome: ', score);
+			}).catch((err) => {
+				console.log('Error in getMatchScore');
 				console.error(err);
 			});
 
