--- a/app/roster.html
+++ b/app/roster.html
@@ -35,21 +35,7 @@
 				</tr>
 				<tr is="roster-list" v-for="(player, index) in players" v-bind:row="player" v-bind:swap="players" v-on:toggle="togglePlayer(index)"></tr>
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-
-    <td></td>
-    <td></td>
-    <td>
-        <select>
-            <option value="Drop">Drop</option>
-            <option value="Starting">Start</option>
-            <option value="Bench">Bench</option>
-        </select>
-    </td>
+					<script>Application().displayRoster()</script>
 				</tr>
 			</table>
 		</div>
@@ -58,7 +44,7 @@
 			<table border="1">
 				<th>Players</th><th>Graffiti</th><th>Pot Holes</th><th>Street Lights</th><th>Score</th><th>League</th><th>Actions</th><th>Pending</th>
 				<tr is="player-list" v-for="(player, index) in players" v-bind:row="player" v-bind:swap="rosters" v-on:acquire="acquirePlayer(index)"></tr>
-
+                <script>Application().displayAllPlayers()</script>
 			</table>
 		</div>
 
