Join league by link

--- a/app/join.html
+++ b/app/join.html
@@ -15,6 +15,10 @@
 				display: none;
 			}
 
+			div#message {
+				display: none;
+			}
+
 		</style>
 
 	</head>
@@ -23,6 +27,8 @@
 		<!-- Header -->
 
 		<h1>Fantasy Civics</h1>
+
+		<div id="message"></div>
 
 		<section id="login">
 			<h2>Login</h2>
@@ -34,7 +40,8 @@
 			<h2>Start a New League</h2>
 			<button id="create-button">Start League</button>
 
-			<h2>Leagues Waiting to Begin</h2>
+			<h2>Leagues You Started</h2>
+			<p>Invite your friends to join your leagues. When you have everyone, click Begin to start playing!</p>
 			<div id="waiting-leagues"></div>
 
 		</section>
