Display errors and messages

--- a/app/join.html
+++ b/app/join.html
@@ -15,7 +15,7 @@
 				display: none;
 			}
 
-			div#message {
+			div#message-container {
 				display: none;
 			}
 
@@ -28,7 +28,9 @@
 
 		<h1>Fantasy Civics</h1>
 
-		<div id="message"></div>
+		<div id="message-container">
+			<p><span id="message"></span> <span id="close-message">[Close]</span></p>
+		</div>
 
 		<section id="login">
 			<h2>Login</h2>
