Successfull creation of leagues

--- a/database/index.html
+++ b/database/index.html
@@ -50,7 +50,9 @@
 			var l2 = '-KdJnBQC6hc7OF9FguyQ';
 			var l3 = '-KdiofxVNZK1_QDoI3cN';
 
-			var LEAGUE_ID = l2;
+			var c1 = '-Ke5VqjCfDrMlPHuUixl';
+
+			var LEAGUE_ID = c1;
 
 			var Database = InitDatabase();
 
