working finalized, edited some variables on database.js

--- a/database/index.html
+++ b/database/index.html
@@ -51,8 +51,9 @@
 			var l3 = '-KdiofxVNZK1_QDoI3cN';
 
 			var c1 = '-Ke5VqjCfDrMlPHuUixl';
+			var c2 = '-KdtthGFgrljtV8WifdI';
 
-			var LEAGUE_ID = c1;
+			var LEAGUE_ID = c2;
 
 			var Database = InitDatabase();
 
