--- a/app/roster.html
+++ b/app/roster.html
@@ -26,13 +26,14 @@
 		</div>
 
 		<div id="userRoster">
+			<h3>{{ leaguename }}</h3>
 			<table>
 				<tr>
 					<th>Players</th><th>Graffiti</th><th>Pot Holes</th><th>Street Lights</th><th>Score</th><th>lineup</th><th>Actions</th><th>Pending</th>
 				</tr>
 				<tr is="roster-list" v-for="(player, index) in players" v-bind:row="player" v-bind:swap="players" v-on:toggle="togglePlayer(index)"></tr>
 				<tr>
-					<td></td><td></td><td></td><td></td>
+					<td><button onclick="Application().setMatchOutcome()">Finalize</button></td><td></td><td></td><td></td>
 					<td>{{ aggregator }}</td>
 					<td></td><td></td><td></td>
 				</tr>
