Show box score and winner

--- a/app/scores.html
+++ b/app/scores.html
@@ -60,10 +60,13 @@
 
 		<section id="page">
 
-			<h2>Box Score</h2>
-			<div id="box-score"></div>
 			<h2>Return to App</h2>
 			<a href="app.html"><button>Back</button></a>
+
+			<h2>Box Score</h2>
+			<div id="box-score">
+				<p id="loading-box-score">Loading..</p>
+			</div>
 
 		</section>
 
