--- a/app/scores.html
+++ b/app/scores.html
@@ -68,6 +68,11 @@
 				<p id="loading-box-score">Loading..</p>
 			</div>
 
+			<h2>Leaderboard</h2>
+			<div id="leaderboard">
+				<p id="loading-leaderboard">Loading..</p>
+			</div>
+
 		</section>
 
 		<!-- Footer -->
