--- a/app/join.html
+++ b/app/join.html
@@ -40,6 +40,7 @@
 		<section id="page">
 
 			<h2>Start a New League</h2>
+			<input id="league-name" type="text" placeholder="League Name">
 			<button id="create-button">Start League</button>
 
 			<h2>Leagues You Started</h2>
