--- a/app/app.html
+++ b/app/app.html
@@ -45,6 +45,7 @@
 
 			<button v-on:click="inviteUsers" :disabled="(!invite)? true : false">Invite</button>
 			<button v-on:click="finalizeLeague" :disabled="(!name || !range)? true : false">Create League</button>
+			<button onclick="viewOutcome();">View Score</button>
 			<ul>
 				<li is="invite-list" v-for="(user, index) in users" v-bind:invite="user" v-on:pop="users.splice(index, 1)"></li>
 			</ul>
@@ -71,12 +72,14 @@
 		<script type="text/javascript" src="../database/database.js"></script>
 		<script type="text/javascript" src="app.js"></script>
 		<script type="text/javascript">
+			
 			// Instantiate app
 			var app = Application();
 			app.getUser();
 			app.displayUser();
 			app.createLeague();
 			app.displayUserLeagues();
+
 		</script>
 	</body>
 </html>
