Ready for test deploy

--- a/app/roster.html
+++ b/app/roster.html
@@ -15,6 +15,7 @@
 		<a href="index.html">Home</a>
 		<a href="app.html">App</a>
 		<a href="#">Roster</a>
+		<button id="outcome" disabled="true" onclick="viewOutcome();">Leaderboard</button>
 
 		<h2>User Info</h2>
 		<div>
