Fix factory function

--- a/app/app.html
+++ b/app/app.html
@@ -73,7 +73,7 @@
 		<script type="text/javascript">
 			
 			// Instantiate app
-			var app = Application();
+			var app = InitApplication();
 			app.getUser();
 			app.displayUser();
 			app.createLeague();
