--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
 		<script type="text/javascript" src="app.js"></script>
 		<script type="text/javascript">
 			// Instantiate app
-			var app = Application();
+			var app = InitApplication();
 			app.getUser();
 		</script>
 	</body>
