--- a/app/roster.html
+++ b/app/roster.html
@@ -59,7 +59,7 @@
 		<script type="text/javascript" src="app.js"></script>
 		<script type="text/javascript">
 			// Instantiate app
-			var app = Application();
+			var app = InitApplication();
 			app.getUser();
 			app.displayUser();
 			app.loadRosterPage();
