--- a/app/index.html
+++ b/app/index.html
@@ -28,12 +28,12 @@
 			<p id="email"></p>
 			<p id="name"></p>
 			<!-- <img id="image" style="width:64px;height:64px;" alt="No Image"></img> -->
-			<button onclick="Application().userLogout()">Logout</button>
+			<button onclick="app.userLogout()">Logout</button>
 		</div>
 		
 		<h2>Login</h2>
 
-		<input type="button" value="Google Authentication" onclick="Application().userLogin()">
+		<input type="button" value="Google Authentication" onclick="app.userLogin()">
 
 		<!-- Footer -->
 
