--- a/app/roster.html
+++ b/app/roster.html
@@ -30,9 +30,9 @@
 			<h3>{{ leaguename }}</h3>
 			<table>
 				<tr>
-					<th>Players</th><th>Graffiti</th><th>Pot Holes</th><th>Street Lights</th><th>Score</th><th>lineup</th><th>Actions</th><th>Pending</th>
+					<th>Players</th><th>{{ headers[Object.keys(headers)[0]] }}</th><th>{{ headers[Object.keys(headers)[1]] }}</th><th>{{ headers[Object.keys(headers)[2]] }}</th><th>Score</th><th>lineup</th><th>Actions</th><th>Pending</th>
 				</tr>
-				<tr is="roster-list" v-for="(player, index) in players" v-bind:row="player" v-bind:swap="players" v-on:toggle="togglePlayer(index)"></tr>
+				<tr is="roster-list" v-for="(player, index) in players" v-bind:row="player" v-bind:header="headers" v-on:toggle="togglePlayer(index)"></tr>
 				<tr>
 					<td><button onclick="app.setMatchOutcome()">Finalize</button></td><td></td><td></td><td></td>
 					<td>{{ aggregator }}</td>
@@ -43,8 +43,8 @@
 
 		<div id="allPlayers">
 			<table>
-				<th>Players</th><th>Graffiti</th><th>Pot Holes</th><th>Street Lights</th><th>Score</th><th>League</th><th>Actions</th><th>Pending</th>
-				<tr is="player-list" v-for="(player, index) in players" v-bind:row="player" v-bind:swap="rosters" v-on:acquire="acquirePlayer(index)"></tr>
+				<th>Players</th><th>{{ headers[Object.keys(headers)[0]] }}</th><th>{{ headers[Object.keys(headers)[1]] }}</th><th>{{ headers[Object.keys(headers)[2]] }}</th><th>Score</th><th>League</th><th>Actions</th><th>Pending</th>
+				<tr is="player-list" v-for="(player, index) in players" v-bind:row="player" v-bind:header="headers" v-on:acquire="acquirePlayer(index)"></tr>
 			</table>
 		</div>
 
