--- a/app/roster.html
+++ b/app/roster.html
@@ -43,7 +43,14 @@
 
 		<div id="allPlayers">
 			<table>
-				<th>Players</th><th>{{ headers[Object.keys(headers)[0]] }}</th><th>{{ headers[Object.keys(headers)[1]] }}</th><th>{{ headers[Object.keys(headers)[2]] }}</th><th>Score</th><th>League</th><th>Actions</th><th>Pending</th>
+				<th>Players</th>
+				<th>{{ headers[Object.keys(headers)[0]] }}</th>
+				<th>{{ headers[Object.keys(headers)[1]] }}</th>
+				<th>{{ headers[Object.keys(headers)[2]] }}</th>
+				<th>Score</th>
+				<th>League</th>
+				<th>Actions</th>
+				<th>Pending</th>
 				<tr is="player-list" v-for="(player, index) in players" v-bind:row="player" v-bind:header="headers" v-on:acquire="acquirePlayer(index)"></tr>
 			</table>
 		</div>
