--- a/app/roster.html
+++ b/app/roster.html
@@ -43,14 +43,15 @@
 
 		<div id="allPlayers">
 			<table>
-				<th>Players <br><button>sort</button></th>
-				<th>{{ headers[Object.keys(headers)[0]] }} <br><button>sort</button></th>
-				<th>{{ headers[Object.keys(headers)[1]] }} <br><button>sort</button></th>
-				<th>{{ headers[Object.keys(headers)[2]] }} <br><button>sort</button></th>
-				<th>Score <br><button>sort</button></th>
-				<th>League <br><button>sort</button></th>
-				<th>Actions <br><button>sort</button></th>
-				<th>Pending <br><button>sort</button></th>
+				<th>Ward <br><button v-on:click="ordering(0)">sort</button></th>
+				<th>Players <br><button v-on:click="ordering(1)">sort</button></th>
+				<th>{{ headers[Object.keys(headers)[0]] }} <br><button v-on:click="ordering(2)">sort</button></th>
+				<th>{{ headers[Object.keys(headers)[1]] }} <br><button v-on:click="ordering(3)">sort</button></th>
+				<th>{{ headers[Object.keys(headers)[2]] }} <br><button v-on:click="ordering(4)">sort</button></th>
+				<th>Score <br><button v-on:click="ordering(5)">sort</button></th>
+				<th>League <br><button v-on:click="ordering(6)">sort</button></th>
+				<th>Actions</th>
+				<th>Pending</th>
 				<tr is="player-list" v-for="(player, index) in players" v-bind:row="player" v-bind:header="headers" v-on:acquire="acquirePlayer(index)"></tr>
 			</table>
 		</div>
