--- a/app/roster.html
+++ b/app/roster.html
@@ -28,6 +28,7 @@
 
 		<div id="userRoster">
 			<h3>{{ leaguename }}</h3>
+			<p>Choose two consecutive players to swap from benching and starting in your roster</p>
 			<table>
 				<tr>
 					<th>Players</th><th>{{ headers[Object.keys(headers)[0]] }}</th><th>{{ headers[Object.keys(headers)[1]] }}</th><th>{{ headers[Object.keys(headers)[2]] }}</th><th>Score</th><th>lineup</th><th>Actions</th><th>Pending</th>
@@ -42,6 +43,8 @@
 		</div>
 
 		<div id="allPlayers">
+			<h3>All Players</h3>
+			<p>Choose two consecutive players to add or drop a player from your roster</p>
 			<table>
 				<th>Ward <br><button v-on:click="ordering(0)">sort</button></th>
 				<th>Players <br><button v-on:click="ordering(1)">sort</button></th>
