--- a/app/app.html
+++ b/app/app.html
@@ -14,11 +14,9 @@
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> <!-- For datepickers -->
 	</head>
 	<body>
-		<!-- Header -->
 		<h1>Fantasy Civics</h1>
 		<p>User account stuffs</p>
 
-		<!-- Contents -->
 		<a href="index.html">Home</a>
 		<a href="#">App</a>
 		<a href="roster.html">Roster</a>
@@ -32,8 +30,8 @@
 			<button onclick="app.userLogout()">Logout</button>
 		</div>
 
-		<h2>Create Leagues</h2>		
-		<div id="newLeague">
+		<h2>Create Leagues</h2>	
+		<div id="newLeague" v-show="false"> <!-- Remove the v-show attribute to show container again -->
 			<input v-model="sim" type="checkbox">
 			<label>Simulation - Play a game using historic data (for debugging or demo purposes)</label>
 			<h3>League Name: {{ name }}</h3>
@@ -48,7 +46,6 @@
 				</ul>
 			</div>
 
-
 			<!-- <input v-model="invite" v-on:keyup.enter="inviteUsers" placeholder="Invite User"><br> -->
 
 			<div id="datepicker" v-show="!sim">
@@ -61,10 +58,7 @@
 				<input type="text" id="endSim">
 			</div>
 
-			<!-- <div id="displayDate"></div> -->
-
 			<!-- <button v-on:click="inviteUsers" :disabled="(!invite)? true : false">Invite</button> -->
-			
 		</div>
 
 		<h2>Current Leagues</h2>
@@ -76,7 +70,6 @@
 			</table>
 		</div>
 
-		<!-- Footer -->
 
 		<!-- script -->
 
