--- a/app/scores.html
+++ b/app/scores.html
@@ -64,6 +64,9 @@
 			<a href="app.html"><button>Back</button></a>
 
 			<h2>Box Score</h2>
+			<select id="week-select">
+				<option value="false">Select Week</option>
+			</select>
 			<div id="box-score">
 				<p id="loading-box-score">Loading..</p>
 			</div>
