--- a/app/join.html
+++ b/app/join.html
@@ -39,6 +39,9 @@
 
 		<section id="page">
 
+			<h2>Return to App</h2>
+			<a href="app.html"><button>Back</button></a>
+
 			<h2>Start a New League</h2>
 			<input id="league-name" type="text" placeholder="League Name">
 			<button id="create-button">Start League</button>
