--- a/app/app.html
+++ b/app/app.html
@@ -31,6 +31,7 @@
 		</div>
 
 		<h2>Create Leagues</h2>	
+		<a href="join.html"><button>Create a New League</button></a>
 		<div id="newLeague" v-show="false"> <!-- Remove the v-show attribute to show container again -->
 			<input v-model="sim" type="checkbox">
 			<label>Simulation - Play a game using historic data (for debugging or demo purposes)</label>
