--- a/app/scores.html
+++ b/app/scores.html
@@ -60,8 +60,8 @@
 
 		<section id="page">
 
-			<h2>Return to App</h2>
-			<a href="app.html"><button>Back</button></a>
+			<h2>Return to Rosters</h2>
+			<a href="roster.html"><button>Back</button></a>
 
 			<h2>Box Score</h2>
 			<div id="box-score">
