Style sort buttons

--- a/app/temp-style.html
+++ b/app/temp-style.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
         <title>Roster</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="reset.css">
         <link rel="stylesheet" type="text/css" href="temp-style.css">
     </head>
@@ -33,7 +34,7 @@
                         <th>Light Outages</th>
                         <th>Abandoned Vehicles</th>
                         <th>Score</th>
-                        <th>lineup</th>
+                        <th>Lineup</th>
                         <th>Actions</th>
                         <th>Pending</th>
                     </tr>
@@ -102,7 +103,7 @@
         </div>
         <div id="allPlayers">
             <h3>All Players</h3>
-            <p>Choose two consecutive players to add or drop a player from your roster</p>
+            <p>Choose two consecutive players to add or drop a player from your roster.</p>
             <table>
                 <tbody>
                     <tr>
