--- a/app/app.html
+++ b/app/app.html
@@ -12,6 +12,9 @@
 		<script type="text/javascript" src="../assets/moment.min.js"></script>
 		<script type="text/javascript" src="../assets/jquery-3.1.1.min.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> <!-- For datepickers -->
+		<link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="reset.css">
+		<link rel="stylesheet" type="text/css" href="temp-style.css">
 	</head>
 	<body>
 		<h1>Fantasy Civics</h1>
