--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,9 @@
 		<script type="text/javascript" src="../assets/promise.min.js"></script>
 		<script type="text/javascript" src="../assets/moment.min.js"></script>
 		<script type="text/javascript" src="../assets/jquery-3.1.1.min.js"></script>
+		<link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="reset.css">
+		<link rel="stylesheet" type="text/css" href="temp-style.css">
 	</head>
 	<body>
 		<!-- Header -->
@@ -33,7 +36,7 @@
 		
 		<h2>Login</h2>
 
-		<input type="button" value="Google Authentication" onclick="app.userLogin()">
+		<button onclick="app.userLogin()">Login with Google</button>
 
 		<!-- Footer -->
 
